--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ DATABASE='Optica'
 USER_DB='postgres'
 PW_DB=0104
 JWT_SECRET=OYASxshjaOLAJSD213swdKLJJASDNCXJaajkusd563
+MAIL=eyeconicoptica@gmail.com
+PASSWORD_MAIL=juqj jpwq kiyh dzpu
