--- a/env.example
+++ b/env.example
@@ -1,1 +1,7 @@
 PORT=3001
+HOST_BD='localhost'
+PORT_BD=5432
+DATABASE='Optica'
+USER_DB='postgres'
+PW_DB=0104
+JWT_SECRET=OYASxshjaOLAJSD213swdKLJJASDNCXJaajkusd563
