--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "pg-promise": "^11.7.8",
+    "stripe": "^17.7.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
